--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@rollbar/react": "^0.11.0",
     "async-retry": "^1.3.3",
     "classnames": "^2.3.1",
+    "i18next-browser-languagedetector": "^6.1.4",
     "jwt-decode": "^3.1.2",
     "next": "^12.1.6",
     "next-i18next": "^11.0.0",
